Fix banner on mobile

--- a/public/scss/components/_banner.scss
+++ b/public/scss/components/_banner.scss
@@ -7,6 +7,7 @@
 }
 
 .banner__image {
+    width: 100%;
     max-width: 728px;
     max-height: 90px;
 }
